# ComputerGraphics

./: .gitignore  README.md  auto_upload.bat
00/: bezier_curve.cpp  nonrectangular_clip.py
01CG/: PPAP.cpp  PPAP_mirror  proposal.txt
01CG/final/LTC/Debug/: LTC.ilk
01CG/final/LTC/LTC/: LTC.vcxproj
01CG/final/LTC/LTC/Debug/: vc140.idb
01CG/final/LTC/LTC/Debug/LTC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LTC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
01CG/final/LTC/LTC/Release/LTC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LTC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
01CG/final/LTC/LTC/x64/Debug/: vc140.idb
01CG/final/LTC/LTC/x64/Debug/LTC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LTC.lastbuildstate
01CG/final/LTC/LTC/x64/Release/LTC.tlog/: LTC.lastbuildstate
01CG/final/LTC/shader_lib/: shader.h
01CG/hw3/: apple.frag  apple.vert  main.cpp  teapot.frag  teapot.vert
02RTR/shadingModels/: ReadMe.txt  glew_glfw.sln
02RTR/shadingModels/glew_glfw/: LoadObj.hpp  camera.hpp  glew_glfw.pro  glew_glfw.vcxproj  glew_glfw.vcxproj.filters  main.cpp  shader.hpp
02RTR/shadingModels/glew_glfw/module/: readme
02RTR/shadingModels/glew_glfw/shader/: teapot.frag  teapot.vert
03DistributedAlgo/: HW.cpp
04NPR/hw1/: CMakeLists.txt  README.md  TriangleWindow.cpp  TriangleWindow.hpp
04NPR/hw2/: CMakeLists.txt  NPR_hw2.cpp  README.md  controls.txt  main.cpp
04NPR/hw2/include/tools/: LoadObj.hpp  MVP.hpp  camera.hpp  shader.hpp  vert_struct.hpp
04NPR/hw2/module/: light.frag  light.vert  teapot.frag  teapot.vert
05CV/Final/: CMakeLists.txt  README.md  build.sh  upload.bat
05CV/Final/cmake/: getGLEW.cmake  getVulkan.cmake
05CV/Final/cmake/Modules/: getGLEW.cmake
05CV/Final/include/fin/: main.hpp  render.hpp  tool.cpp  tool.hpp
05CV/Final/src/fin/: main.cpp  render.cpp  tool.cpp
05CV/hw1/: CMakeLists.txt  README.md  main.cpp
05CV/hw1/cmake/: getOpenCV.cmake
05CV/hw1/include/hw1/: hw1_tool.hpp
05CV/hw1/src/hw1/: CMakeLists.txt  hw1_tool.cpp
05CV/hw2/: CMakeLists.txt  README.md  build.bat  dependencies.md  main.cpp
05CV/hw2/cmake/: getBoost.cmake
05CV/hw2/include/hw2/: hw2_tool.hpp  tool.hpp
05CV/hw2/src/hw2/: hw2_tool.cpp  tool.cpp  tool.cpp~RF5edad83.TMP
